# featuresflags

./: README.md  flags.json  pyproject.toml
docs/: plan.md
src/featureflags/: __init__.py  flags.py  maybe.py  storage.py
tests/: test_example.py
